# kubernetes-native-ai-platform

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  PROJECT_INSTRUCTION.md  README.md
cli/: go.mod  main.go
cli/cmd/: client.go  client_test.go  deploy.go  model.go  root.go  train.go
control-plane/: go.mod  go.sum
control-plane/migrations/: 001_create_tenants.up.sql  002_create_projects.up.sql  003_create_api_tokens.up.sql  004_create_platform_events.down.sql  004_create_platform_events.up.sql  005_token_prefix.up.sql  006_tenant_quota.down.sql  006_tenant_quota.up.sql  007_create_training_jobs.down.sql  007_create_training_jobs.up.sql  008_create_training_runs.down.sql  008_create_training_runs.up.sql  009_create_model_records.down.sql  009_create_model_records.up.sql  010_create_model_versions.down.sql  010_create_model_versions.up.sql  011_create_deployments.up.sql  012_create_deployment_revisions.down.sql  012_create_deployment_revisions.up.sql  013_job_retry.down.sql  013_job_retry.up.sql  014_deployment_failure_reason.down.sql  014_deployment_failure_reason.up.sql  embed.go
docs/architecture/: model-lifecycle.md  overview.md  serving-flow.md  training-flow.md
docs/planning/: ARCHITECTURE_NOTES.md  BACKLOG.md  IMPLEMENTATION_PLAN.md
docs/runbooks/: demo-walkthrough.md  local-setup.md
examples/demo-clients/: demo.sh  record.sh
examples/deployment-specs/: resnet-prod.yaml
operator/: go.mod
sdk/python/: pyproject.toml
sdk/python/platformclient/: __init__.py  client.py  specs.py
sdk/python/tests/: test_client.py  test_specs.py
(+125 files in other folders)
