[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "platformclient"
version = "0.1.0"
description = "Thin Python SDK for the kubernetes-native AI/ML platform"
requires-python = ">=3.11"
dependencies = ["requests>=2.31"]

[project.optional-dependencies]
dev = ["pytest>=8", "responses>=0.25"]
